--- a/templates/user/change-password-view.html
+++ b/templates/user/change-password-view.html
@@ -1,8 +1,9 @@
-<div ng-include="'templates/header-view.html'"></div>
+<div ng-include="'templates/partial/head.html'"></div>
+<div ng-include="'templates/partial/header-view.html'"></div>
 
-<!-- Change Password -->
+<!-- User Change Password -->
 <div class="wrapper style1 first" ng-if="isLoggedIn">
-    <article id="changePassword" class="container 75%">
+    <article class="container 75%">
         <header>
             <h1>Change Password</h1>
         </header>
@@ -63,5 +64,13 @@
     </article>
 </div>
 
+<!--  Change Password -->
+<div class="wrapper style1 first" ng-if="!isLoggedIn">
+    <article class="container 75%">
+        <header>
+            <h1>Access denied. Please log in!</h1>
+        </header>
+    </article>
+</div>
 
-<div ng-include="'templates/footer-view.html'"></div>
+<div ng-include="'templates/partial/footer-view.html'"></div>
