--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -68,6 +68,11 @@
 				margin: 0 0.5em 0 0.5em;
 			}
 
+            form .browse
+            {
+                margin: 0 0.5em 0 3em;
+            }
+
 	/* Button */
 	
 		input[type="button"],
@@ -87,9 +92,6 @@
 				font-size: 1.5em;
 				letter-spacing: -0.025em;
 			}
-		.browse {
-			margin-left: 90px;
-		}
 
 	/* Box */
 
