Create edit profile form with validation

--- a/templates/signup-view.html
+++ b/templates/signup-view.html
@@ -41,11 +41,11 @@
                                 <div class="6u radio">
                                     <legend>Gender:</legend>
                                     <label for="male">Male</label>
-                                    <input type="radio" name="gender" id="male" value="male" ng-model="signUpData.gender"/>
+                                    <input type="radio" name="gender" id="male" value=1 ng-model="signUpData.gender"/>
                                     <label for="female">Female</label>
-                                    <input type="radio" name="gender" id="female" value="female" ng-model="signUpData.gender"/>
+                                    <input type="radio" name="gender" id="female" value=2 ng-model="signUpData.gender"/>
                                     <label for="other">Other</label>
-                                    <input type="radio" name="gender" id="other" value="other" ng-model="signUpData.gender"/>
+                                    <input type="radio" name="gender" id="other" value=0 ng-model="signUpData.gender"/>
                                 </div>
                             </div>
                             <div class="row 200%">
