--- a/templates/user/edit-profile-view.html
+++ b/templates/user/edit-profile-view.html
@@ -12,48 +12,51 @@
                 <div class="12u">
                     <div class="row">
                         <div class="4u" id="top">
-                            <span class="image fit"><img ng-src="{{editProfileData.facePicture}}"/></span>
-                            <label for="photo-upload" class="button browse">Browse photo</label>
-                            <input id="photo-upload" type="file" ng-file-select="onFileSelect($files)"
-                                   ng-model="editProfileData.facePicture"/>
+                            <span class="image fit">
+                                <img src="images/base-user.jpg" ng-src="{{editProfilePicturesData.profileImageData}}"/>
+                            </span>
+                            <label for="photo-upload" class="button browse">Browse Photo</label>
+                            <input id="photo-upload" type="file" ng-face-picture-select="onFileSelect($files)"
+                                   ng-model="editProfilePicturesData.profileImageData"/>
                         </div>
                         <div class="8u">
                             <div class="row">
                                 <div class="6u">
                                     <input type="text" name="username" id="username" placeholder="Username"
-                                           required ng-model="editProfileData.username"/>
+                                           required ng-model="editProfileFormData.username"/>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="6u">
                                     <input type="text" name="email" id="email" placeholder="Email"
-                                           required ng-model="editProfileData.email"/>
+                                           required ng-model="editProfileFormData.email"/>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="6u radio">
                                     <legend>Gender:</legend>
                                     <label for="male">Male</label>
-                                    <input type="radio" name="gender" id="male" value="male"
-                                           ng-model="editProfileData.gender"/>
+                                    <input type="radio" name="gender" id="male" value=1
+                                           ng-model="editProfileFormData.gender"/>
                                     <label for="female">Female</label>
-                                    <input type="radio" name="gender" id="female" value="female"
-                                           ng-model="editProfileData.gender"/>
+                                    <input type="radio" name="gender" id="female" value=2
+                                           ng-model="editProfileFormData.gender"/>
                                     <label for="other">Other</label>
-                                    <input type="radio" name="gender" id="other" value="other"
-                                           ng-model="editProfileData.gender"/>
+                                    <input type="radio" name="gender" id="other" value=0
+                                           ng-model="editProfileFormData.gender"/>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="6u">
-                                    <span class="image"><img ng-src="{{editProfileData.coverPicture}}"/></span>
+                                    <span class="image"><img src="images/base-cover.jpg"
+                                                             ng-src="{{editProfilePicturesData.coverImageData}}"/></span>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="6u">
-                                    <label for="cover-upload" class="button">Browse cover</label>
-                                    <input id="cover-upload" type="file" ng-file-select="onFileSelect($files)"
-                                           ng-model="editProfileData.coverPicture"/>
+                                    <label for="cover-upload" class="button">Browse Cover</label>
+                                    <input id="cover-upload" type="file" ng-cover-picture-select="onFileSelect($files)"
+                                           ng-model="editProfilePicturesData.coverImageData"/>
                                 </div>
                             </div>
                         </div>
@@ -61,8 +64,8 @@
                 </div>
                 <div class="row">
                     <div class="12u">
-                        <input type="button" value="Save Changes" ng-click="saveEditProfile()"
-                                   ng-disabled="!logInForm.$valid" />
+                        <input type="button" value="Save Changes" ng-click="editProfile()"
+                               ng-disabled="!editProfileForm.$valid"/>
                     </div>
                 </div>
             </form>
