Create get user and  wall template

--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,12 @@
 
 	/* Image */
 
+		.profile-image {
+			vertical-align: middle;
+			width: 1.4em;
+			height: 1.4em;
+		}
+
 		.image
 		{
 			display: inline-block;
