Refactor session storage data

--- a/templates/user/change-password-view.html
+++ b/templates/user/change-password-view.html
@@ -65,7 +65,7 @@
 </div>
 
 <!--  Change Password -->
-<div class="wrapper style1 first" ng-if="!isLoggedIn">
+<div class="wrapper style1 first" ng-if="!isLoggedIn" ng-bind="redirect()">
     <article class="container 75%">
         <header>
             <h1>Access denied. Please log in!</h1>
