--- a/templates/user/edit-profile-view.html
+++ b/templates/user/edit-profile-view.html
@@ -48,8 +48,7 @@
                             </div>
                             <div class="row">
                                 <div class="6u">
-                                    <span class="image"><img src="images/base-cover.jpg"
-                                                             ng-src="{{userData.coverImageData}}"/></span>
+                                    <span class="image"><img ng-src="{{userData.coverImageData}}"/></span>
                                 </div>
                             </div>
                             <div class="row">
