--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -1,4 +1,7 @@
+<!-- Head -->
 <div ng-include="'templates/partial/head.html'"></div>
+
+<!-- Header -->
 <div ng-include="'templates/partial/header-view.html'"></div>
 
 <!-- Welcome Guest -->
@@ -33,4 +36,5 @@
     </article>
 </div>
 
+<!-- Footer -->
 <div ng-include="'templates/partial/footer-view.html'"></div>
