--- a/templates/signup-view.html
+++ b/templates/signup-view.html
@@ -1,4 +1,7 @@
+<!-- Head -->
 <div ng-include="'templates/partial/head.html'"></div>
+
+<!-- Header -->
 <div ng-include="'templates/partial/header-view.html'"></div>
 
 <!-- Sign Up Guest -->
@@ -66,12 +69,7 @@
 </div>
 
 <!-- Sign Up User -->
-<div class="wrapper style1 first" ng-if="isLoggedIn">
-    <article class="container 75%">
-        <header>
-            <h1>Access denied. Please log out!</h1>
-        </header>
-    </article>
-</div>
+<div class="wrapper style1 first" ng-if="isLoggedIn" ng-bind="redirect()"></div>
 
+<!-- Footer -->
 <div ng-include="'templates/partial/footer-view.html'"></div>
