--- a/templates/user/change-password-view.html
+++ b/templates/user/change-password-view.html
@@ -1,4 +1,7 @@
+<!-- Head -->
 <div ng-include="'templates/partial/head.html'"></div>
+
+<!-- Header -->
 <div ng-include="'templates/partial/header-view.html'"></div>
 
 <!-- User Change Password -->
@@ -64,13 +67,8 @@
     </article>
 </div>
 
-<!--  Change Password -->
-<div class="wrapper style1 first" ng-if="!isLoggedIn" ng-bind="redirect()">
-    <article class="container 75%">
-        <header>
-            <h1>Access denied. Please log in!</h1>
-        </header>
-    </article>
-</div>
+<!-- Guest Change Password -->
+<div class="wrapper style1 first" ng-if="!isLoggedIn" ng-bind="redirect()"></div>
 
+<!-- Footer -->
 <div ng-include="'templates/partial/footer-view.html'"></div>
