Minimise some function

--- a/templates/signup-view.html
+++ b/templates/signup-view.html
@@ -69,7 +69,7 @@
 </div>
 
 <!-- Sign Up User -->
-<div class="wrapper style1 first" ng-if="isLoggedIn" ng-bind="redirect()"></div>
+<div class="wrapper style1 first" ng-if="isLoggedIn" ng-bind="cancel()"></div>
 
 <!-- Footer -->
 <div ng-include="'templates/partial/footer-view.html'"></div>
