--- a/templates/login-view.html
+++ b/templates/login-view.html
@@ -43,7 +43,7 @@
 </div>
 
 <!-- LogIn User -->
-<div class="wrapper style1 first" ng-if="isLoggedIn" ng-bind="redirect()"></div>
+<div class="wrapper style1 first" ng-if="isLoggedIn" ng-bind="cancel()"></div>
 
 <!-- Footer -->
 <div ng-include="'templates/partial/footer-view.html'"></div>
