--- a/templates/user/change-password-view.html
+++ b/templates/user/change-password-view.html
@@ -68,7 +68,7 @@
 </div>
 
 <!-- Guest Change Password -->
-<div class="wrapper style1 first" ng-if="!isLoggedIn" ng-bind="redirect()"></div>
+<div class="wrapper style1 first" ng-if="!isLoggedIn" ng-bind="cancel()"></div>
 
 <!-- Footer -->
 <div ng-include="'templates/partial/footer-view.html'"></div>
