--- a/templates/user/edit-profile-view.html
+++ b/templates/user/edit-profile-view.html
@@ -76,7 +76,7 @@
 </div>
 
 <!-- Guest Edit Profile -->
-<div class="wrapper style1 first" ng-if="!isLoggedIn" ng-bind="redirect()"></div>
+<div class="wrapper style1 first" ng-if="!isLoggedIn" ng-bind="cancel()"></div>
 
 <!-- Footer -->
 <div ng-include="'templates/partial/footer-view.html'"></div>
