--- a/templates/user/wall-view.html
+++ b/templates/user/wall-view.html
@@ -21,7 +21,7 @@
 </div>
 
 <!-- Guest Wall -->
-<div class="wrapper style1 first" ng-if="!isLoggedIn" ng-bind="redirect()"></div>
+<div class="wrapper style1 first" ng-if="!isLoggedIn" ng-bind="cancel()"></div>
 
 <!-- Footer -->
 <div ng-include="'templates/partial/footer-view.html'"></div>
