--- a/templates/user/wall-view.html
+++ b/templates/user/wall-view.html
@@ -7,7 +7,7 @@
 <!-- User Wall -->
 <div class="wrapper style1 first" ng-if="isLoggedIn">
     <article class="container" id="top">
-        <div class="row">
+        <div class="row" ng-cover-background="http://placekitten.com/g/250/300">
             <div class="4u">
                 <span class="image fit"><img ng-src="{{userData.profileImageData}}"/></span>
             </div>
