--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -73,6 +73,13 @@
                 margin: 0 0.5em 0 3em;
             }
 
+			form textarea
+			{
+				resize: none;
+				width: 340px;
+				height: 135px;
+			}
+
 	/* Button */
 	
 		input[type="button"],
