--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@
 				margin: 0 0 0.5em 0;
 			}
 
-            form input:focus
+            form input:focus, textarea:focus
             {
                 outline: 0;
             }
