--- a/templates/user/wall-view.html
+++ b/templates/user/wall-view.html
@@ -7,14 +7,59 @@
 <!-- User Wall -->
 <div class="wrapper style1 first" ng-if="isLoggedIn">
     <article class="container" id="top">
-        <div class="row" ng-cover-background="http://placekitten.com/g/250/300">
+        <div class="row" ng-cover-background="{{userData.coverImageData}}">
             <div class="4u">
                 <span class="image fit"><img ng-src="{{userData.profileImageData}}"/></span>
             </div>
+            <div class="4u">
+                <h1>{{userData.name}}</h1>
+                <input ng-if="userData.username != myData.username" type="button" value="Friend"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="4u 12u(mobile)">
+                <div class="row">
+                    <section class="box style1">
+                        <form>
+                            <div class="row">
+                                <div class="12u">
+                                    <textarea name="post" id="post" placeholder="Message..."
+                                              ng-model="postData.postContent"></textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="12u">
+                                    <img class="profile-image" ng-show="userData.profileImageData"
+                                         ng-src="{{userData.profileImageData}}"/>
+                                    <span>as {{userData.name}}</span>
+                                    <input type="button" value="Post" ng-click="createPost()"/>
+                                </div>
+                            </div>
+                        </form>
+                    </section>
+                </div>
+                <div class="row">
+                    <section class="box style4">
+                        <div class="row">
+                            <div class="12u">
+                                Friends - 33 total
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="12u">
+                                <a href=""><img src="images/testFriend.jpg"/></a>
+                                <a href=""><img src="images/testFriend.jpg"/></a>
+                                <a href=""><img src="images/testFriend.jpg"/></a>
+                                <a href=""><img src="images/testFriend.jpg"/></a>
+                                <a href=""><img src="images/testFriend.jpg"/></a>
+                                <a href=""><img src="images/testFriend.jpg"/></a>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
             <div class="8u">
-                <header>
-                    <h1>Welcome to my wall</h1>
-                </header>
+                <h2>Posts</h2>
             </div>
         </div>
     </article>
