Create news feed page and fill data

--- a/templates/user/wall-view.html
+++ b/templates/user/wall-view.html
@@ -13,7 +13,7 @@
             </div>
             <div class="4u">
                 <h1>{{userData.name}}</h1>
-                <input ng-if="userData.username != myData.username" type="button" value="Friend"/>
+                <input ng-if="false" type="button" value="Friend"/>
             </div>
         </div>
         <div class="row">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="8u">
-                <h2>Posts</h2>
+                <h1>Wall Posts</h1>
             </div>
         </div>
     </article>
