--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -28,9 +28,64 @@
     <article class="container">
         <div class="row">
             <div class="12u">
-                <header>
-                    <h1>News Feed</h1>
-                </header>
+                <h1>News Feed</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="4u 12u(mobile)">
+                <section class="box style1">
+                    <div class="row">
+                        <div class="12u">
+                            Friends - 33 total
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="12u">
+                            <a href=""><img src="images/testFriend.jpg"/></a>
+                            <a href=""><img src="images/testFriend.jpg"/></a>
+                            <a href=""><img src="images/testFriend.jpg"/></a>
+                            <a href=""><img src="images/testFriend.jpg"/></a>
+                            <a href=""><img src="images/testFriend.jpg"/></a>
+                            <a href=""><img src="images/testFriend.jpg"/></a>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="8u">
+                <section class="box style1" ng-repeat="news in feedsData">
+                    <div class="row">
+                        <div class="4u">
+                            <img ng-src="{{news.author.profileImageData}}"/>
+                        </div>
+                        <div class="8u">
+                            <div class="row">
+                                <div class="8u">
+                                    {{news.author.name}}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="8u">
+                                    {{news.date | date:'dd MMM yyyy HH:mm:ss'}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="12u">
+                            {{news.postContent}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="6u">
+                            {{news.likesCount}}
+                            <a class="icon fa-thumbs-o-up"> Like</a>
+                        </div>
+                        <div class="6u">
+                            {{news.totalCommentsCount}}
+                            <a class="icon fa-comments-o"> Comment</a>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
     </article>
