--- a/templates/user/wall-view.html
+++ b/templates/user/wall-view.html
@@ -7,59 +7,47 @@
 <!-- User Wall -->
 <div class="wrapper style1 first" ng-if="isLoggedIn">
     <article class="container" id="top">
-        <div class="row" ng-cover-background="{{userData.coverImageData}}">
-            <div class="4u">
-                <span class="image fit"><img ng-src="{{userData.profileImageData}}"/></span>
+        <section class="box style1" ng-cover-background="{{userData.coverImageData}}">
+            <div class="row" >
+                <div class="4u">
+                    <span class="image fit"><img ng-src="{{userData.profileImageData}}"/></span>
+                </div>
+                <div class="8u">
+                    <h1>{{userData.name}}</h1>
+                    <input ng-if="false" type="button" value="Friend"/>
+                </div>
             </div>
-            <div class="4u">
-                <h1>{{userData.name}}</h1>
-                <input ng-if="false" type="button" value="Friend"/>
-            </div>
-        </div>
+        </section>
         <div class="row">
-            <div class="4u 12u(mobile)">
+            <div class="4u">
                 <div class="row">
-                    <section class="box style1">
-                        <form>
-                            <div class="row">
-                                <div class="12u">
+                    <div class="12u">
+                        <section class="box style1">
+                            <form>
+                                <div class="row">
+                                    <div class="12u">
                                     <textarea name="post" id="post" placeholder="Message..."
                                               ng-model="postData.postContent"></textarea>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="12u">
-                                    <img class="profile-image" ng-show="userData.profileImageData"
-                                         ng-src="{{userData.profileImageData}}"/>
-                                    <span>as {{userData.name}}</span>
-                                    <input type="button" value="Post" ng-click="createPost()"/>
+                                <div class="row">
+                                    <div class="12u">
+                                        <img class="profile-image" ng-show="userData.profileImageData"
+                                             ng-src="{{userData.profileImageData}}"/>
+                                        <span>as {{userData.name}}</span>
+                                        <input type="button" value="Post" ng-click="createPost()"/>
+                                    </div>
                                 </div>
-                            </div>
-                        </form>
-                    </section>
+                            </form>
+                        </section>
+                    </div>
                 </div>
                 <div class="row">
-                    <section class="box style4">
-                        <div class="row">
-                            <div class="12u">
-                                Friends - 33 total
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="12u">
-                                <a href=""><img src="images/testFriend.jpg"/></a>
-                                <a href=""><img src="images/testFriend.jpg"/></a>
-                                <a href=""><img src="images/testFriend.jpg"/></a>
-                                <a href=""><img src="images/testFriend.jpg"/></a>
-                                <a href=""><img src="images/testFriend.jpg"/></a>
-                                <a href=""><img src="images/testFriend.jpg"/></a>
-                            </div>
-                        </div>
-                    </section>
+                    <div class="12u" ng-include="'templates/partial/friends-preview-view.html'"></div>
                 </div>
             </div>
-            <div class="8u" ng-infinite-scroll="loadWallFeed()" ng-infinite-scroll-disabled="wallFeedBusy" ng-infinite-scroll-distance="0">
-                <div ng-include="'templates/partial/posts-view.html'"></div>
+            <div ng-include="'templates/partial/posts-view.html'" class="8u" ng-infinite-scroll="loadWallFeed()"
+                 ng-infinite-scroll-disabled="wallFeedBusy" ng-infinite-scroll-distance="0">
             </div>
         </div>
     </article>
