Create friends controller with friends view

--- a/templates/partial/header-view.html
+++ b/templates/partial/header-view.html
@@ -15,7 +15,8 @@
                 <span>{{userData.name}}</span>
             </a>
         </li>
-        <li><a href="#/" class="icon fa-newspaper-o" title="News Feed"></a></li>
+        <li><a href="#/" class="icon fa-comments" title="News Feed"></a></li>
+        <li><a href="" class="icon fa-users" title="Friends"></a></li>
         <li><a href="#/edit/profile" class="icon fa-cogs" title="Edit Profile"></a></li>
         <li><a href="#/edit/password" class="icon fa-key" title="Change Password"></a></li>
         <li><a href="" class="icon fa-sign-out" title="Log Out" ng-click="logout()"></a></li>
