--- a/templates/partial/friends-preview-view.html
+++ b/templates/partial/friends-preview-view.html
@@ -1,18 +1,15 @@
 <!-- Friends Preview -->
-<section class="box style1">
+<section class="box style1" ng-controller="FriendsController">
     <div class="row">
         <div class="12u">
-            Friends - 6 total
+            Friends - <a href="#/friends">{{friendsData.length}}</a> total
         </div>
     </div>
     <div class="row">
         <div class="12u">
-            <a href=""><img src="images/testFriend.jpg"/></a>
-            <a href=""><img src="images/testFriend.jpg"/></a>
-            <a href=""><img src="images/testFriend.jpg"/></a>
-            <a href=""><img src="images/testFriend.jpg"/></a>
-            <a href=""><img src="images/testFriend.jpg"/></a>
-            <a href=""><img src="images/testFriend.jpg"/></a>
+            <a href="" ng-repeat="friend in friendsData">
+                <img ng-src="{{friend.profileImageData}}" class="thumb-image"/>
+            </a>
         </div>
     </div>
 </section>
