--- a/templates/partial/header-view.html
+++ b/templates/partial/header-view.html
@@ -16,7 +16,28 @@
             </a>
         </li>
         <li><a href="#/" class="icon fa-comments" title="News Feed"></a></li>
-        <li><a href="" class="icon fa-users" title="Friends"></a></li>
+        <li>
+            <a href="" class="icon fa-users" title="Friends" ng-click="expandFriendRequests()">
+                <div class="red-dot" ng-if="friendRequestsData.length != 0">{{friendRequestsData.length}}</div>
+            </a>
+
+            <div class="box 12u friend-requests" ng-if="friendRequestsData.expanded">
+                <div class="row" ng-repeat="friendRequest in friendRequestsData">
+                    <div class="row"><img class="thumb-image" ng-src="{{friendRequest.user.profileImageData}}"/></div>
+                    <div class="row">
+                        <div class="12u">{{friendRequest.user.name}}</div>
+                    </div>
+                    <div class="row">
+                        <div class="6u">
+                            <input type="button" value="Accept" ng-click="acceptFriendRequest(friendRequest.id)"/>
+                        </div>
+                        <div class="6u">
+                            <input type="button" value="Reject" ng-click="rejectFriendRequest(friendRequest.id)"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
         <li><a href="#/edit/profile" class="icon fa-cogs" title="Edit Profile"></a></li>
         <li><a href="#/edit/password" class="icon fa-key" title="Change Password"></a></li>
         <li><a href="" class="icon fa-sign-out" title="Log Out" ng-click="logout()"></a></li>
