--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,29 @@
 			{
 				border: 0;
 			}
+		.search-box
+		{
+			height: 2em;
+			line-height: 1.5em;
+			font-size: 0.8em;
+		}
+		.search-response
+		{
+			position: absolute;
+			right: 0;
+			top: 3.5em;
+			border: 1px solid #2a2a2a;
+			border-radius: 10px;
+			background-color: #2a2a2a;
+		}
+		.search-element
+		{
+			padding-top: 14px;
+		}
+		.search-element a
+		{
+			cursor: pointer;
+		}
 
 	/* Tables */
 
@@ -361,6 +384,11 @@
 		.thumb-image {
 			width: 100px;
 			height: 100px;
+		}
+		.small-thumb-image
+		{
+			width: 50px;
+			height: 50px;
 		}
 
 	/* Button */
@@ -637,8 +665,10 @@
 	.friend-requests
 	{
 		position: absolute;
-		border: 1px solid black;
-		border-radius: 5px;
+		left: 0;
+		top: 3.5em;
+		border: 1px solid #2a2a2a;
+		border-radius: 10px;
 		background-color: #2a2a2a;
 	}
 
